--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -9,6 +9,7 @@ body {
 
 .sponsor-window {
   line-height: 3em;
+  margin-top: 10px;
 }
 
 .initechtris {
@@ -55,7 +56,7 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: row;
-  padding-top: 50px;
+  padding-top: 25px;
   align-items: center;
   justify-content: center;
 }
@@ -76,6 +77,30 @@ canvas {
 .game-panel {
   font-size: 1.5em;
   line-height: 1.5em;
+}
+
+.score-text {
+  font-size: 1.5em;
+  font-family: 'Montserrat', sans-serif;
+  text-shadow:
+    2px 1px 0 #57B09F,
+  -1px -1px 0 #000,
+   1px -1px 0 #000,
+   -1px 1px 0 #000,
+    1px 1px 0 #57B09F;
+    margin-bottom: 10px;
+}
+
+#score {
+  font-size: 2em;
+  font-family: 'Montserrat', sans-serif;
+  text-shadow:
+    2px 1px 0 #57B09F,
+  -1px -1px 0 #000,
+   1px -1px 0 #000,
+   -1px 1px 0 #000,
+    1px 1px 0 #57B09F;
+  margin-bottom: 20px;
 }
 
 h2 {
@@ -114,7 +139,7 @@ h2 {
   background: url("https://www.brandsoftheworld.com/sites/default/files/styles/logo-thumbnail/public/0024/6465/brand.gif?itok=WXRZKWKU");
   background-repeat: no-repeat;
   background-position: center center;
-  height: 100px;
+  height: 125px;
 }
 
 .id-card {
@@ -126,22 +151,28 @@ h2 {
   border-radius: 4px;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding-bottom: 10px;
   height: 250px;
 }
 
 .employee {
   display: flex;
   flex-direction: row;
-  padding: 15px;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
 .bio {
-  padding-top: 20px;
   text-transform: uppercase;
   align-items: center;
   justify-content: center;
-  margin-left: 15px;
+  margin-left: 45px;
   text-align: center;
   vertical-align: middle;
+}
+
+@media only screen and (max-width: 800px) {
+  .sponsor-window {
+    display: none;
+  }
 }
